--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -55,8 +56,8 @@
 
 		<dependency>
 			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-maven-plugin</artifactId>
-			<version>8.5.4</version>
+			<artifactId>flyway-core</artifactId>
+			<version>5.2.3</version>
 		</dependency>
 
 	</dependencies>
