--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost/tcc_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=senha
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
